# controller/Auth.js
@@ -3,7 +3,7 @@ const controller = {};
 const jwt = require('jsonwebtoken');
 const accessTokenSecret = 'somerandomaccesstoken';
 const refreshTokenSecret = 'somerandomstringforrefreshtoken';
-const db = require('../config/database/dbapi');
+const db = require('../config/database/index');
 
 const users = [
     {
@@ -23,11 +23,11 @@ controller.post = async function(req, res) {
     try{
 
 
-        let msemployee = await db.query("SELECT * from users where email='" + req.body.email + "'");
+        let msemployee = await db.dbapiseq.query("SELECT * from users where email='" + req.body.email + "'");
 
         if (msemployee.length > 0) {
 
-            const accessToken = jwt.sign({ username: req.body.email, role: "admin" }, accessTokenSecret, { expiresIn: '20m' });
+            const accessToken = jwt.sign({ username: req.body.email, role: "admin" }, accessTokenSecret, { expiresIn: '365d' });
             const refreshToken = jwt.sign({ username: req.body.email, role: "admin" }, refreshTokenSecret);
     
             refreshTokens.push(refreshToken);
@@ -51,25 +51,6 @@ controller.post = async function(req, res) {
             )
         }
 
-        // const { username, password } = req.body;
-
-        // // filter user from the users array by username and password
-        // const user = users.find(u => { return u.username === username && u.password === password });
-    
-        // if (user) {
-        //     // generate an access token
-        //     const accessToken = jwt.sign({ username: user.username, role: user.role }, accessTokenSecret, { expiresIn: '20m' });
-        //     const refreshToken = jwt.sign({ username: user.username, role: user.role }, refreshTokenSecret);
-    
-        //     refreshTokens.push(refreshToken);
-    
-        //     res.json({
-        //         accessToken,
-        //         refreshToken
-        //     });
-        // } else {
-        //     res.send('Username or password incorrect');
-        // }
 
     }catch(error){
 
