# controller/Cemployee.js
@@ -1,7 +1,7 @@
 const model = require('../model/index');
 const controller = {};
 const { Op } = require('sequelize');
-const db = require('../config/database/mysql');
+const db = require('../config/database/index');
 
 controller.getAll = async function(req, res) {
     try{
@@ -19,15 +19,15 @@ controller.getAll = async function(req, res) {
                 //         model: model.position
                 //     }
                 // ],
-                where:{
-                    [Op.and]: [
-                        {
-                            EmployeeCode: 'E01'
-                        }
-                    ]
-                },
+                // where:{
+                //     [Op.and]: [
+                //         {
+                //             EmployeeCode: 'E01'
+                //         }
+                //     ]
+                // },
                 order: [['EmployeeCode', 'asc']],
-                limit: 100,
+                // limit: 100,
                 
             }
         )
@@ -35,15 +35,16 @@ controller.getAll = async function(req, res) {
         if (msemployee.length > 0) {
             res.status(200).json(
                 {
-                    message : 'Get Method Employee',
+                    status: true,
+                    message : 'Success Get Data',
                     data : msemployee
                 }
             )
         }else{
             res.status(200).json(
                 {
+                    status: false,
                     message : 'Tidak Ada Data',
-                    data : []
                 } 
             )
         }
@@ -51,6 +52,7 @@ controller.getAll = async function(req, res) {
     }catch(error){
         res.status(404).json(
             {
+                status: false,
                 message : error
             }
         )
@@ -72,8 +74,8 @@ controller.getAllQuery = async function(req, res) {
         }else{
             res.status(200).json(
                 {
+                    status:false,
                     message : 'Tidak Ada Data',
-                    data : []
                 } 
             )
         }
@@ -81,6 +83,7 @@ controller.getAllQuery = async function(req, res) {
     }catch(error){
         res.status(404).json(
             {
+                status: false,
                 message : error
             }
         )
@@ -90,25 +93,27 @@ controller.getAllQuery = async function(req, res) {
 controller.getOne = async function(req, res) {
     try{
 
+        
         let msemployee = await model.msemployee.findAll(
             {
                 where: {
-                    nim: req.params.EmployeeCode
+                    EmployeeCode: req.params.EmployeeCode
                 }
             }
         )
         if (msemployee.length > 0){
             res.status(200).json(
                 {
-                    message : 'Get Method Employee',
+                    status: true,
+                    message : 'Success Get Data',
                     data : msemployee
                 }
             )
         }else{
-            res.status(200).json(
+            res.status(404).json(
                 {
-                    message : 'Tidak Ada Data',
-                    data : []
+                    status: false,
+                    message : 'Tidak Ada Data'
                 } 
             )
         }
@@ -116,6 +121,7 @@ controller.getOne = async function(req, res) {
 
         res.status(404).json(
             {
+                status:false,
                 message : error
             }
         )
@@ -148,20 +154,22 @@ controller.getSearch = async function(req, res) {
                         }
                     ]
                 },
+                limit: 100,
             }
         )
         if (msemployee.length > 0){
             res.status(200).json(
                 {
-                    message : 'Get Method Employee',
+                    status: true,
+                    message : 'Success Get Data',
                     data : msemployee
                 }
             )
         }else{
             res.status(200).json(
                 {
-                    message : 'Tidak Ada Data',
-                    data : []
+                    status: false,
+                    message : 'Tidak Ada Data'
                 } 
             )
         }
@@ -169,6 +177,7 @@ controller.getSearch = async function(req, res) {
 
         res.status(404).json(
             {
+                status:false,
                 message : error
             }
         )
@@ -177,36 +186,74 @@ controller.getSearch = async function(req, res) {
 
 controller.post = async function(req, res) {
     try{
+        
+        if (!req.files) {
+         
+            const employees = req.body;
 
-        let msemployee = await model.msemployee.create(
-            {
-                HOCode: req.body.HOCode,
-                HOName: req.body.HOName,
-                BuildingCode: req.body.BuildingCode,
-                BuildingName: req.body.BuildingName,
-                EmployeeCode: req.body.EmployeeCode,
-                EmployeeName: req.body.EmployeeName,
-                Password: req.body.Password,
-                DOB: req.body.DOB,
-                TempatLahir: req.body.TempatLahir,
-                MaritalStatus: req.body.MaritalStatus,
-                PositionCode: req.body.PositionCode,
-                PositionName: req.body.PositionName,
-                Photo: req.file.path
-            }
-          
-        )
-            console.log(msemployee)
-            res.status(201).json(
+            var values = [];
+         
+            employees.forEach(function(obj){
+                 // process.stdout.write(obj.NM_PASIEN + " ")
+                 values.push([obj.HOCode, obj.HOName, obj.BuildingCode, obj.BuildingName, obj.EmployeeCode, obj.EmployeeName, 
+                 obj.Password, obj.DOB, obj.TempatLahir, obj.MaritalStatus, obj.PositionCode,obj.PositionName])
+             });
+         
+             var sql = "INSERT INTO msemployee(HOCode,HOName,BuildingCode,BuildingName,EmployeeCode,EmployeeName,Password,DOB,TempatLahir,MaritalStatus,PositionCode,PositionName)VALUES ?";
+   
+             db.dbsample.query(sql,[values], (err, result) => {
+                if (err) throw err;
+                res.status(200).json({
+                    success : true,
+                    message : "Data Pasien Berhasil Disimpan"
+                })
+            });
+
+            // db.query(sql,[values], (err, result) => {
+            //      if (err) throw err;
+            //      res.status(200).json({
+            //          success : true,
+            //          message : "Data Pasien Berhasil Disimpan"
+            //      })
+            //  });
+
+          } else {
+            // File exists.
+            console.log("File exists");
+
+            let msemployee = await model.msemployee.create(
                 {
-                    message: 'MsEmployee Success Save',
-                    data: msemployee
+                    HOCode: req.body.HOCode,
+                    HOName: req.body.HOName,
+                    BuildingCode: req.body.BuildingCode,
+                    BuildingName: req.body.BuildingName,
+                    EmployeeCode: req.body.EmployeeCode,
+                    EmployeeName: req.body.EmployeeName,
+                    Password: req.body.Password,
+                    DOB: req.body.DOB,
+                    TempatLahir: req.body.TempatLahir,
+                    MaritalStatus: req.body.MaritalStatus,
+                    PositionCode: req.body.PositionCode,
+                    PositionName: req.body.PositionName,
+                    Photo: req.file.path
                 }
+              
             )
+                res.status(201).json(
+                    {
+                        message: 'MsEmployee Success Save',
+                        data: msemployee
+                    }
+                )
+
+          }
+  
+     
     }catch(error){
 
         res.status(404).json(
             {
+                status: false,
                 message : error
             }
         )
